@@ -1,3 +1,6 @@
+2010-06-09 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #6467: Encoding of the Header (thanks to internezzo ag)
+
 2010-05-26 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Manual is reverted
 	* Bug #7704: rid is not updated.
